tests/derive-tests/as_variant_ref/fail/enum/tuple_variants/many_fields.err.txt
error: proc-macro derive panicked
 --> /tests/derive-tests/as_variant_ref/fail/enum/tuple_variants/many_fields.rs:5:10
  |
5 | #[derive(AsVariantRef)]
  |          ^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with single-element tuple variants can use this derive")
error[E0412]: cannot find type `VariantB` in this scope
 --> /tests/derive-tests/as_variant_ref/fail/enum/tuple_variants/many_fields.rs:7:14
  |
3 | pub struct VariantA;
  | -------------------- similarly named struct `VariantA` defined here
...
7 |     VariantA(VariantB),
  |              ^^^^^^^^
  |
help: there is an enum variant `crate::Enum::VariantB`; try using the variant's enum
  |
7 |     VariantA(crate::Enum),
  |              ~~~~~~~~~~~
help: a struct with a similar name exists
  |
7 |     VariantA(VariantA),
  |              ~~~~~~~~
For more information about this error, try `rustc --explain E0412`.
error: could not compile `<CRATE>` (bin "<BIN>") due to 2 previous errors
